tests/__snapshots__/api-expect-skip-fail-stderr.snap.txt
Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  2 | 
  3 | expect.skip.fail<string>().type.toBe<string>();
  4 | expect.fail<string>().type.toBe<string>();
    |        ~~~~
  5 | 
  6 | expect.skip
  7 |   .fail(() => {

      at ./__typetests__/expect-skip-fail.tst.ts:4:8

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  13 |   test("is string?", () => {
  14 |     expect.skip.fail<string>().type.toBe<string>();
  15 |     expect.fail<string>().type.toBe<string>();
     |            ~~~~
  16 |   });
  17 | });
  18 | 

       at ./__typetests__/expect-skip-fail.tst.ts:15:12

Error: The assertion was supposed to fail, but it passed.

Consider removing the '.fail' flag.

  19 | test("is number?", () => {
  20 |   expect.skip.fail<number>().type.toBe<number>();
  21 |   expect.fail<number>().type.toBe<number>();
     |          ~~~~
  22 | });
  23 | 

       at ./__typetests__/expect-skip-fail.tst.ts:21:10

